@@ -278,6 +278,8 @@ static int _pixelFormat = RGB565;
 	if (on) {
 		glEnable(GL_BLEND);
 		glBlendFunc(GL_SRC_ALPHA, GL_ONE_MINUS_SRC_ALPHA);
+//		glBlendFunc(GL_ONE, GL_ONE_MINUS_SRC_ALPHA);
+
 	} else
 		glDisable(GL_BLEND);
 }
